syntax = "proto3";

option java_package = "ru.anydevprojects.simplepodcastapp";
option java_multiple_files = true;

message UserPrefs {
    string id = 1;
    string name = 2;
    string family_name = 3;
    string email = 4;
    string picture_url = 5;
}